--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# python
+/chat-api/venv/Include
+/chat-api/venv/Lib
+/chat-api/venv/Scripts
+/chat-api/venv/pyvenv.cfg
+/chat-api/venv/fast-chat-api/__pycache__
+/chat-api/venv/fast-chat-api/.env
