--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -16,8 +16,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Docker Login
       env:
-        DOCKER_USERNAME : ${{env.DOCKER_USERNAME}}
-        DOCKER_PASSWORD : ${{env.DOCKER_PASSWORD}}
+        DOCKER_USERNAME : ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD : ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u DOCKER_USERNAME -p DOCKER_PASSWORD
 
     - name: Build Docker Image
