--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-markdown": "^10.1.0",
     "react-speech-recognition": "^4.0.0",
     "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.5",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1"
   },
