--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -24,4 +24,4 @@ jobs:
       run: docker build -t chatbot-client .
 
     - name: Push Docker Image to Docker Hub
-      run: docker image push pranav910/chatbot-client:latest
+      run: docker image push pranav910/chatbot-client
